Reprogrammed the bot to use spotify-web-api-node

--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "ssrb",
+  "name": "spotify-song-requests",
   "version": "1.0.0",
   "description": "Spotify Song Request Bot",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -23,9 +23,6 @@
   },
   "homepage": "https://github.com/salkinxd/SpotifySongRequests#readme",
   "dependencies": {
-    "dank-twitch-irc": "^3.0.7",
-    "express": "^4.17.1",
-    "request": "^2.88.2",
     "spotify-web-api-node": "^4.0.0",
     "tmi.js": "^1.5.0"
   }
