--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   },
   "homepage": "https://github.com/salkinxd/SpotifySongRequests#readme",
   "dependencies": {
+    "console-stamp": "^0.2.9",
     "spotify-web-api-node": "^4.0.0",
     "tmi.js": "^1.5.0"
   }
